--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "randexp": "^0.5.3",
@@ -17,7 +18,9 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.3.2"
+    "react-table": "^7.8.0",
+    "web-vitals": "^3.3.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "predeploy": "npm run build",
