--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "json-validator-app",
+  "name": "design-optimizer-tool",
   "version": "0.1.0",
-  "homepage": "https://alurulalla.github.io/json-schema-validator",
+  "homepage": "",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +24,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
